# linktools

./: .gitignore  .version  CLAUDE.md  README.md  manage.py  metadata.jinja2  pyproject.toml  requirements.txt  requirements.yml  setup.py
linktools-ai/: CHANGELOG.md  MIGRATION.md  README.md  pyproject.toml  requirements.yml
linktools-ai-testing/: pyproject.toml
linktools-ai-testing/src/linktools/ai/testing/: __init__.py  contracts.py
linktools-ai/conformance/: __init__.py  adapter.py  conftest.py  test_conformance.py
linktools-ai/docs/: FINAL_FUNCTION_MATRIX.md  FUNCTIONAL_PARITY.md
linktools-ai/docs/architecture/: ac17-revert-drill-record.md  current-baseline.md  dependency-rules.md  glossary.md  section-7-7-verification-evidence.md
linktools-ai/scripts/: rebuild_dev_storage.py
linktools-ai/src/linktools/ai/: __init__.py  _typing.py  agent.py  clock.py  errors.py  json.py  runnable.py  runtime.py
linktools-ai/src/linktools/ai/_runtime/: __init__.py  build.py  dependencies.py  inspection.py  lifecycle.py
linktools-ai/src/linktools/ai/agent/: __init__.py  approval.py  approval_service.py  catalog.py  checkpoint.py  codec.py  compiler.py  context_policies.py  dependencies.py  engine.py  models.py  runner.py  spec.py
linktools-ai/src/linktools/ai/agent_runtime/: approval.py  compiler.py  models.py  runner.py  spec.py
linktools-ai/src/linktools/ai/artifact/: __init__.py  coordination.py  digest.py  models.py  store.py
linktools-ai/src/linktools/ai/asset/: __init__.py  _path_security.py  artifact.py  backend.py  cursor.py  file.py  memory.py  models.py  path.py  readonly.py  store.py
linktools-ai/src/linktools/ai/budget/: hook.py  tracker.py
linktools-ai/src/linktools/ai/capabilities/: mcp.py  memory.py  protocols.py  run.py  skill.py  store.py  subagent.py
linktools-ai/src/linktools/ai/capability/: __init__.py  assembler.py  builtin.py  bundle.py  exposure.py  inspection.py  models.py  options.py  policy.py  provider.py  ref.py  registry.py  resolver.py
linktools-ai/src/linktools/ai/catalog/: __init__.py  _utils.py  contracts.py  parsing.py  source.py
linktools-ai/src/linktools/ai/checkpoint/: local.py  protocols.py
linktools-ai/src/linktools/ai/core/: __init__.py  agent.py  artifact.py  builtin_tools.py  environment.py  mcp_client.py  model_runtime.py  prompt.py  registry.py  run.py  runtime.py  session.py  session_coordination.py  session_window.py  skill_view.py  stores.py
linktools-ai/src/linktools/ai/evaluation/: __init__.py  comparison.py  models.py  protocols.py  replay.py  runner.py  snapshot.py  store.py  targets.py
linktools-ai/src/linktools/ai/events/: context.py  criticality.py  envelope.py  payloads.py  registry.py  store.py
linktools-ai/src/linktools/ai/execution/: __init__.py  container.py  local.py  protocols.py  toolset.py  workspace.py
linktools-ai/src/linktools/ai/extension/: __init__.py  capability_provider.py  content.py  entrypoint.py  provider.py  resolver.py  resource.py  scope.py  spec.py  toolset.py
linktools-ai/src/linktools/ai/fork/: coordinator.py
linktools-ai/src/linktools/ai/governance/: __init__.py
linktools-ai/src/linktools/ai/identity/: __init__.py  principal.py
linktools-ai/src/linktools/ai/jobs/: __init__.py  models.py  protocols.py  runtime.py  snapshot.py  store.py  validation.py  worker.py
linktools-ai/src/linktools/ai/knowledge/: __init__.py  context.py  document.py  retriever.py
linktools-ai/src/linktools/ai/mcp/: __init__.py  capability.py  catalog.py  client.py  codec.py  env.py  provider.py  registry.py  spec.py  toolset.py
linktools-ai/src/linktools/ai/memory/: __init__.py  capability.py  index.py  manager.py  models.py  outbox.py  scope.py  service.py  store.py
linktools-ai/src/linktools/ai/memory_runtime/: __init__.py  index.py  models.py  store.py
linktools-ai/src/linktools/ai/middleware/: __init__.py  base.py  budget.py  capability.py  loop_guard.py  pipeline.py  reminder.py
linktools-ai/src/linktools/ai/model/: __init__.py  policy.py  pricing.py  registry.py  resolver.py  router.py
linktools-ai/src/linktools/ai/observability/: __init__.py  logging.py  metrics.py  tracing.py
linktools-ai/src/linktools/ai/package/: __init__.py  capability_provider.py  entrypoint.py  provider.py  resolver.py  resource.py  scope.py  spec.py  toolset.py
linktools-ai/src/linktools/ai/periodic_reminder/: capability.py
linktools-ai/src/linktools/ai/plan/: capability.py
linktools-ai/src/linktools/ai/policy/: __init__.py  approval.py  command.py  engine.py  network.py  path.py  permission.py  presets.py  profile.py  risk.py  rule.py
linktools-ai/src/linktools/ai/prompt/: __init__.py  builder.py  window.py
linktools-ai/src/linktools/ai/providers/: __init__.py  agent.py  bundle.py  mapping.py  mcp.py  package.py  skill.py  subagent.py  swarm.py  tool_policy.py
linktools-ai/src/linktools/ai/registry/: __init__.py  _config.py  _utils.py  agent.py  mcp.py  parser.py  skill.py  swarm.py  tool.py
linktools-ai/src/linktools/ai/registry_store/: local.py  protocols.py  store.py
linktools-ai/src/linktools/ai/resource/: database.py  file.py  local.py  protocols.py  store.py
linktools-ai/src/linktools/ai/resource_store/: database.py  file.py  local.py  protocols.py  store.py
linktools-ai/src/linktools/ai/retrieval/: scope.py  (+4 more)
linktools-ai/src/linktools/ai_cli/: __init__.py  client.py  errors.py  fields.py  models.py  project.py  prompt_provider.py  runtime.py  skill_index.py
linktools-ai/testing/: __init__.py  contracts.py
linktools-ai/tests/capabilities/: test_memory_repository.py  test_store_sync.py
linktools-ai/tests/core/: test_agent_runtime_kernel.py  test_environment.py  test_stores.py
linktools-ai/tests/support/: test_hooks.py
linktools-common/: .version  README.md  capability.jinja2  pyproject.toml  requirements.yml
tests/external_adapter/: conftest.py  pyproject.toml
tests/external_adapter/src/external_adapter/: __init__.py  commit.py  conformance_adapter.py  storage.py
tests/external_adapter/tests/: test_conformance.py  test_runtime_e2e.py  test_wheel_isolation.py
(+1243 files in other folders)
