[build-system]
requires = ["linktools-setup"]
build-backend = "linktools_setup.build_meta"

[project]
name = "linktools"
description = "linktools toolkit"
requires-python = ">=3.6"
authors = [{name = "Hu Ji", email = "669898595@qq.com"}]
readme = {file = "README.md", content-type = "text/markdown"}
license = "Apache-2.0"
dynamic = ["version", "dependencies", "optional-dependencies", "scripts"]

[project.urls]
Homepage = "https://github.com/linktools-toolkit/linktools"
Repository = "https://github.com/linktools-toolkit/linktools.git"

[tool.setuptools.packages.find]
where = ["src"]
include = ["linktools*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
linktools = ["assets/**"]

[tool.setuptools.exclude-package-data]
linktools = ["develop/**"]

[tool.linktools]
version = {file = ".version"}
dependencies = {file = "requirements.yml"}
convert = [
  {type = "jinja2", source = "src/linktools/develop/metadata.jinja2", dest = "src/linktools/metadata.py"},
  {type = "yml2json", source = "src/linktools/develop/tools.yml", dest = "src/linktools/assets/tools.json"},
]

[tool.linktools.scripts]
console = [
  {name = "lt", module = "linktools.__main__"},
  {path = "src/linktools/cli/commands/common", prefix = "ct", module = "linktools.cli.commands.common"},
  {path = "src/linktools/cli/commands/android", prefix = "at", module = "linktools.cli.commands.android"},
  {path = "src/linktools/cli/commands/ios", prefix = "it", module = "linktools.cli.commands.ios"},
]
