# external_adapter -- the wheel-only external adapter proof.
#
# This is a STANDALONE test package, NOT part of the core linktools-ai wheel.
# It ships no reference-backend code of its own and imports only the public
# ``linktools.ai.*`` storage Protocols at runtime; its conformance tests
# additionally import the ``linktools.ai.testing`` testkit. Both are declared
# here as real dependencies so a strict isolated ``pip install`` pulls them in
# (the install procedure installs the wheels first, but the pyproject
# must still be honest about what the package needs).
[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "external-adapter"
version = "0.0.0"
description = "AC-15 wheel-only external storage adapter proof for linktools-ai."
requires-python = ">=3.10"
dependencies = [
    "linktools-ai",
]

[project.optional-dependencies]
test = [
    "linktools-ai-testing",
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
